--- a/background-style.html
+++ b/background-style.html
@@ -61,6 +61,9 @@
       height: 100%; 
       object-fit: contain; 
       display: block;
+      border: none;
+      outline: none;
+      box-shadow: none;
       image-rendering: -webkit-optimize-contrast;
       image-rendering: crisp-edges;
     }
