--- a/background-workspace.html
+++ b/background-workspace.html
@@ -144,18 +144,18 @@
 <i class="fas fa-palette"></i> Change Background
         </button>
 <button class="btn btn-primary" disabled="" id="downloadPng">
-<i class="fas fa-download"></i> Download PNG
+<i class="fas fa-download"></i> Download
         </button>
 <button class="btn btn-primary" id="newUploadBtn" style="margin-left: 8px;">
-<i class="fas fa-plus"></i> New Upload
+<i class="fas fa-plus"></i>
         </button>
 </div>
 </section>
-<section class="panel">
-<h2>Processing Options</h2>
+<section class="panel" style="display: none;">
+<h2 style="display: none;">Processing Options</h2>
 <div class="status-card" id="statusMessage"></div>
 <!-- Process Button -->
-<div style="margin: 20px 0; padding: 20px; background: #f8f9ff; border-radius: 12px; border: 1px solid #e2e6ff;">
+<div style="display: none; margin: 20px 0; padding: 20px; background: #f8f9ff; border-radius: 12px; border: 1px solid #e2e6ff;">
   <button id="processBtn" class="btn btn-primary" style="width: 100%;">
     <i class="fas fa-magic"></i> Process Image
   </button>
