Fix: Watermark PDF pages - Structure optimized, SEO enhanced, meta tags added, sitemap updated

--- a/resume-maker.html
+++ b/resume-maker.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resume Maker - Online Free Tool | easyjpgtopdf</title>
-    <meta name="description" content="Use our free Resume Maker tool online. Fast, secure, and easy to use.">
-    <meta name="keywords" content="resume-maker, resume maker, free resume-maker, online resume-maker">
+    <title>Resume Maker Online Free - Create Professional Resume & CV Builder 2025 | easyjpgtopdf</title>
+    <meta name="description" content="Create professional resumes and CVs online for free. Best free resume builder with templates. Download in PDF format. No registration required. Fast & secure resume maker.">
+    <meta name="keywords" content="resume maker, resume builder, cv builder, create resume online, free resume maker, resume template, professional resume, cv maker, online resume builder, resume generator, free cv builder, resume builder online, resume creator, cv creator, make resume, build resume, resume website, best resume builder, resume maker free, cv maker online, professional cv builder">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://easyjpgtopdf.com/resume-maker.html">
+    <meta property="og:title" content="Resume Maker Online Free - Create Professional Resume & CV Builder 2025">
+    <meta property="og:description" content="Create professional resumes and CVs online for free. Best free resume builder with templates. Download in PDF format. No registration required.">
+    <meta property="og:url" content="https://easyjpgtopdf.com/resume-maker.html">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Resume Maker Online Free - Create Professional Resume & CV Builder 2025">
+    <meta name="twitter:description" content="Create professional resumes and CVs online for free. Best free resume builder with templates. Download in PDF format.">
     <link rel="stylesheet" href="css/header.css">
 <link rel="stylesheet" href="css/voice-assistant.css">
 <script src="js/voice-assistant.js" defer></script>
@@ -1120,52 +1127,6 @@
             min-height: 100%;
         }
 
-        .resume-
-
-        .resume-header h1 {
-            margin: 0;
-            color: #2b2d42;
-            font-size: 24px;
-        }
-
-        .resume-header p {
-            margin: 5px 0 0;
-            color: #6c757d;
-            font-size: 16px;
-        }
-
-        .contact-info {
-            display: flex;
-            justify-content: center;
-            gap: 15px;
-            margin-top: 10px;
-            font-size: 14px;
-            color: #6c757d;
-        }
-
-        .section {
-            margin-bottom: 20px;
-        }
-
-        .section-title {
-            color: #4361ee;
-            border-bottom: 1px solid #e0e0e0;
-            padding-bottom: 5px;
-            margin-bottom: 10px;
-            font-size: 18px;
-        }
-
-        .experience-item, .education-item {
-            margin-bottom: 15px;
-        }
-
-        .item-
-
-        .item-title {
-            font-weight: 600;
-            color: #2b2d42;
-        }
-
         .item-date {
             color: #6c757d;
             font-size: 14px;
@@ -1241,10 +1202,22 @@
             <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "WebPage",
-      "name": "Resume Maker - Online Free Tool | easyjpgtopdf",
-      "description": "Use our free Resume Maker tool online. Fast, secure, and easy to use.",
+      "@type": "WebApplication",
+      "name": "Resume Maker Online Free - Create Professional Resume & CV Builder 2025",
+      "description": "Create professional resumes and CVs online for free. Best free resume builder with templates. Download in PDF format. No registration required. Fast & secure resume maker.",
       "url": "https://easyjpgtopdf.com/resume-maker.html",
+      "applicationCategory": "UtilityApplication",
+      "operatingSystem": "Any",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.8",
+        "ratingCount": "1250"
+      },
       "inLanguage": "en-US",
       "isPartOf": {
         "@type": "WebSite",
@@ -1276,15 +1249,15 @@
 
 <section class="hero" style="background: linear-gradient(135deg, #4361ee, #3a0ca3); color: #fff; padding: 40px 0; text-align: center; margin-bottom: 24px;">
 <div class="container">
-<h1 style="font-size: 2.5rem; margin-bottom: 15px;">Resume Maker - Create Professional Resumes Online Free</h1>
-<p style="font-size: 1.2rem; opacity: 0.95;">Create professional resumes and CVs online for free. Choose from multiple templates, customize your design, and download in PDF format.</p>
+<h1 style="font-size: 2.5rem; margin-bottom: 15px;">Resume Maker Online Free - Create Professional Resume & CV Builder 2025</h1>
+<p style="font-size: 1.2rem; opacity: 0.95;">Create professional resumes and CVs online for free. Best free resume builder with customizable templates. Download in PDF format instantly. No registration required.</p>
 </div>
 </section>
 
     <div class="container">
         <div class="app-container">
             <div class="form-section">
-                <h2>Resume Builder</h2>
+                <h2>Free Resume Builder - Create Your Professional Resume</h2>
                 <div class="personal-info-grid">
                     <div class="personal-fields">
                         <div class="form-group">
@@ -1518,7 +1491,7 @@
             </div>
             
             <div class="preview-section">
-                <h2 class="section-title">Resume Preview</h2>
+                <h2 class="section-title">Live Resume Preview</h2>
                 
                 <div class="resume-preview" id="resumePreview">
                     <div class="resume-preview-header">
@@ -1712,7 +1685,6 @@
             const religion = document.getElementById('religion').value || 'N/A';
             const nationality = document.getElementById('nationality').value || 'N/A';
 
-            document.getElementById('previewName').textContent = fullName;
             document.getElementById('previewCandidateName').textContent = fullName;
             document.getElementById('previewTitle').textContent = jobTitle;
 
@@ -2764,7 +2736,7 @@
         <div class="container" style="max-width: 900px; margin: 0 auto;">
             <h2 style="font-size: 2rem; color: #4361ee; margin-bottom: 20px; text-align: center;">
                 <i class="fas fa-info-circle" style="margin-right: 10px;"></i>
-                About Resume Maker
+                About Free Resume Maker & CV Builder Tool
             </h2>
             <div class="content-text" style="font-size: 1.1rem; color: #56607a; line-height: 1.8; text-align: center; margin-bottom: 30px;">
                 <p>Our biodata maker is a professional online tool that helps you create impressive biodata, resumes, and CVs with ease. This comprehensive tool is perfect for job seekers, professionals, and students who need to create professional biodata documents quickly and effectively. The biodata maker provides various templates, formats, and layouts to suit different industries and career levels. You can customize fonts, colors, sections, and layouts to create a biodata that reflects your personality and professional style. The tool includes sections for personal information, education, work experience, skills, achievements, and more. Whether you're creating a resume, CV, or biodata for job applications, our biodata maker provides a comprehensive solution. The tool allows you to export your biodata in PDF format for easy sharing and printing. All biodata creation happens securely in the cloud with automatic file deletion after processing. The tool is completely free to use with no watermarks, and premium users can access additional templates and advanced customization options. No software installation is required - simply use our online editor to create your biodata and download your professional document. Whether you're creating resumes, CVs, or biodata for job applications, our biodata maker provides a reliable, fast, and professional solution for all your biodata creation needs.</p>
