--- a/watermark-pdf-convert.html
+++ b/watermark-pdf-convert.html
@@ -4,11 +4,18 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Watermark PDF - Add Watermark to PDF Online Free | PDF Watermark Tool</title>
-    <meta name="description" content="Add watermark to PDF files online for free. Text or image watermarks. Protect your documents with custom watermarks.">
-    <meta name="keywords" content="watermark pdf, add watermark to pdf, pdf watermark, pdf watermarking tool, free pdf watermark, online pdf watermark">
+<title>Watermarked PDF Download - Your PDF with Watermark Ready | PDF Watermark Tool</title>
+    <meta name="description" content="Download your watermarked PDF file. Your PDF has been successfully watermarked with custom text or image. Fast, secure, and completely free.">
+    <meta name="keywords" content="watermarked pdf download, pdf with watermark, download watermarked pdf, watermark pdf result, pdf watermark download, watermark pdf online">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://easyjpgtopdf.com/watermark-pdf-convert.html">
+    <meta property="og:title" content="Watermarked PDF Download - Your PDF with Watermark Ready">
+    <meta property="og:description" content="Download your watermarked PDF file. Your PDF has been successfully watermarked with custom text or image.">
+    <meta property="og:url" content="https://easyjpgtopdf.com/watermark-pdf-convert.html">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Watermarked PDF Download - Your PDF with Watermark Ready">
+    <meta name="twitter:description" content="Download your watermarked PDF file. Your PDF has been successfully watermarked.">
 <link href="css/footer.css" rel="stylesheet"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"></link>
 <style>
@@ -65,8 +72,8 @@
     {
       "@context": "https://schema.org",
       "@type": "WebPage",
-      "name": "Watermark PDF - Add Watermark to PDF Online Free | PDF Watermark Tool",
-      "description": "Add watermark to PDF files online for free. Text or image watermarks. Protect your documents with custom watermarks.",
+      "name": "Watermarked PDF Download - Your PDF with Watermark Ready | PDF Watermark Tool",
+      "description": "Download your watermarked PDF file. Your PDF has been successfully watermarked with custom text or image. Fast, secure, and completely free.",
       "url": "https://easyjpgtopdf.com/watermark-pdf-convert.html",
       "inLanguage": "en-US",
       "isPartOf": {
@@ -88,7 +95,7 @@
     <nav aria-label="Breadcrumb" style="padding: 15px 0; background: #f8f9ff; border-bottom: 1px solid #e2e6ff;">
         <div class="container" style="max-width: 1200px; margin: 0 auto; padding: 0 24px;">
             <ol style="list-style: none; display: flex; flex-wrap: wrap; gap: 10px; margin: 0; padding: 0; align-items: center;">
-                <li><a href="feedback.html" style="color: #4361ee; text-decoration: none; font-weight: 500; transition: color 0.3s;" onmouseover="this.style.color='#3a0ca3'" onmouseout="this.style.color='#4361ee'">Home</a></li>
+                <li><a href="index.html" style="color: #4361ee; text-decoration: none; font-weight: 500; transition: color 0.3s;" onmouseover="this.style.color='#3a0ca3'" onmouseout="this.style.color='#4361ee'">Home</a></li>
                 <li><span style="margin: 0 8px; color: #9ca3af;">|</span></li>
                 <li><a href="login.html" style="color: #56607a; font-weight: 500; text-decoration: none; transition: color 0.3s;" onmouseover="this.style.color='#4361ee'" onmouseout="this.style.color='#56607a'">Sign In</a></li>
                 <li><span style="margin: 0 8px; color: #9ca3af;">|</span></li>
@@ -96,9 +103,18 @@
             </ol>
         </div>
     </nav>
+
+<section class="hero" style="background: linear-gradient(135deg, #4361ee, #3a0ca3); color: #fff; padding: 40px 0; text-align: center; margin-bottom: 24px;">
+<div class="container">
+<h1 style="font-size: 2.5rem; margin-bottom: 12px; font-weight: 700;">Watermarked PDF Download - Your PDF with Watermark Ready</h1>
+<p style="font-size: 1.1rem; opacity: 0.95;">Your PDF has been successfully watermarked. Download your watermarked PDF file instantly.</p>
+</div>
+</section>
+
 <div class="container">
 <div class="tool-page">
-<div class="title">Watermark Result</div>
+<h2 style="font-size: 1.8rem; color: #4361ee; margin-bottom: 15px; text-align: center;">Watermark Result</h2>
+<div class="title" style="display: none;">Watermark Result</div>
 <div class="meta" id="meta">Loading...</div>
 <div class="actions">
 <a class="btn" href="watermark-pdf.html"><i class="fas fa-arrow-left"></i> Back to Converter</a>
@@ -179,7 +195,19 @@
     document.addEventListener('DOMContentLoaded', init);
   </script>
     
-<script src="js/auth.js" type="module">
+<script src="js/auth.js" type="module"></script>
+
+    <section class="explanatory-content" style="margin: 40px 0; padding: 40px; background: linear-gradient(135deg, #f8f9ff, #ffffff); border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+        <div class="container" style="max-width: 900px; margin: 0 auto;">
+            <h2 style="font-size: 2rem; color: #4361ee; margin-bottom: 20px; text-align: center;">
+                <i class="fas fa-info-circle" style="margin-right: 10px;"></i>
+                About PDF Watermark Tool
+            </h2>
+            <div class="content-text" style="font-size: 1.1rem; color: #56607a; line-height: 1.8; text-align: center; margin-bottom: 30px;">
+                <p>Our PDF watermark tool allows you to add custom text or image watermarks to your PDF documents online for free. Protect your documents, add branding, or mark them as confidential with professional watermarks. The tool supports customizable text watermarks with adjustable font size, color, opacity, rotation, and position. You can also add logo watermarks for branding purposes. Watermarks can be applied to all pages or just the first page of your PDF. The tool processes files securely in your browser without uploading to servers, ensuring your documents remain private. All watermarking happens instantly with no watermarks on the output file. Perfect for protecting confidential documents, adding company branding, marking drafts, or copyright protection.</p>
+            </div>
+        </div>
+    </section>
 
     <footer>
         <div class="container footer-inner">
