--- a/background-workspace.html
+++ b/background-workspace.html
@@ -1596,10 +1596,16 @@
     </script>
 
     <section class="feedback-section" style="margin: 40px 0; padding: 40px; background: #f8f9ff; border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
-        <h2 style="font-size: 2rem; color: #4361ee; margin-bottom: 30px; text-align: center;">
+        <h2 style="font-size: 2rem; color: #4361ee; margin-bottom: 10px; text-align: center;">
             <i class="fas fa-comments" style="margin-right: 10px;"></i>
             Reviews & Comments
         </h2>
+        <div style="text-align: center; margin-bottom: 30px;">
+            <a href="feedback.html" style="display: inline-flex; align-items: center; gap: 8px; color: #4361ee; text-decoration: none; font-weight: 600; font-size: 1rem; transition: color 0.3s;" onmouseover="this.style.color='#3a0ca3'" onmouseout="this.style.color='#4361ee'">
+                <i class="fas fa-external-link-alt"></i>
+                View All Comments
+            </a>
+        </div>
         
         <div class="feedback-grid" style="display: grid; grid-template-columns: 1fr 1fr; gap: 24px; align-items: flex-start; max-width: 1200px; margin: 0 auto;">
             <div class="feedback-card" style="background: white; padding: 24px; border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.05); min-height: 400px; max-height: 600px; overflow-y: auto;">
