--- a/split-pdf-convert.html
+++ b/split-pdf-convert.html
@@ -307,6 +307,12 @@
             <i class="fas fa-comments" style="margin-right: 10px;"></i>
             Reviews & Comments
         </h2>
+        <div style="text-align: center; margin-bottom: 30px;">
+            <a href="feedback.html" style="display: inline-flex; align-items: center; gap: 8px; color: #4361ee; text-decoration: none; font-weight: 600; font-size: 1rem; transition: color 0.3s;" onmouseover="this.style.color='#3a0ca3'" onmouseout="this.style.color='#4361ee'">
+                <i class="fas fa-external-link-alt"></i>
+                View All Comments
+            </a>
+        </div>
         
         <div class="feedback-grid" style="display: grid; grid-template-columns: 1fr 1fr; gap: 24px; align-items: flex-start; max-width: 1200px; margin: 0 auto;">
             <!-- Left Side: Comments List -->
