--- a/avif-to-jpg.html
+++ b/avif-to-jpg.html
@@ -168,6 +168,12 @@ Yes, all files are processed securely and automatically deleted after conversion
 <i class="fas fa-comments" style="margin-right: 10px;"></i>
 Reviews & Comments
 </h2>
+        <div style="text-align: center; margin-bottom: 30px;">
+            <a href="feedback.html" style="display: inline-flex; align-items: center; gap: 8px; color: #4361ee; text-decoration: none; font-weight: 600; font-size: 1rem; transition: color 0.3s;" onmouseover="this.style.color='#3a0ca3'" onmouseout="this.style.color='#4361ee'">
+                <i class="fas fa-external-link-alt"></i>
+                View All Comments
+            </a>
+        </div>
 <div style="max-width: 800px; margin: 0 auto; background: white; padding: 30px; border-radius: 12px;">
 <p style="text-align: center; color: #56607a;">Share your experience and help others discover this tool.</p>
 </div>
