--- a/biodata-maker.html
+++ b/biodata-maker.html
@@ -288,17 +288,23 @@
       gap: 20px;
     }
 
-    .preview-
+    .preview-header {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
 
     .photo-shell {
-      width: 120px;
-      height: 150px;
-      border-radius: 16px;
+      width: 98px;
+      height: 129px;
+      border-radius: 50%;
       overflow: hidden;
-      border: 2px dashed rgba(67, 97, 238, 0.35);
+      border: 2px solid rgba(67, 97, 238, 0.3);
       background: var(--highlight);
       display: grid;
       place-items: center;
+      flex-shrink: 0;
     }
 
     .photo-shell img {
