Rename Biodata Maker to Marriage Biodata Maker - Update all references, SEO tags, H1, H2, links, and JS files

--- a/index.html
+++ b/index.html
@@ -1878,8 +1878,8 @@
                     <div class="tool-icon">
                         <i class="fas fa-id-card"></i>
                     </div>
-                    <h3>Marrige Biodata-Data Maker</h3>
-                    <p>Design attractive biodata for various purposes.</p>
+                    <h3>Marriage Biodata Maker</h3>
+                    <p>Create professional marriage biodata with live preview.</p>
                 </div>
                 <div class="tool-card" onclick="location.href='ai-image-generator.html'">
                     <div class="tool-icon">
@@ -3744,12 +3744,12 @@
         </div>
     </section>
 
-    <!-- Marrige Biodata-Data Maker Page -->
+    <!-- Marriage Biodata Maker Page -->
     <section id="biodata-maker" class="page">
         <div class="container">
             <div class="tool-page">
-                <h2>Marrige Biodata-Data Maker</h2>
-                <p>Create professional biodata documents for various purposes.</p>
+                <h2>Marriage Biodata Maker</h2>
+                <p>Create professional marriage biodata documents with live preview.</p>
                 
                 <h3 style="margin: 30px 0 15px;">Choose Template</h3>
                 <div class="options">
