--- a/resume-maker.html
+++ b/resume-maker.html
@@ -2766,11 +2766,11 @@
         </h2>
         <div class="tools-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px;">
 
-            <a href="biodata-maker.html" style="display: block; padding: 20px; background: #f8f9ff; border-radius: 12px; text-decoration: none; text-align: center; transition: transform 0.3s, box-shadow 0.3s; border: 2px solid transparent;" 
+            <a href="biodata-maker.html" style="display: block; padding: 20px; background: #f8f9ff; border-radius: 12px; text-decoration: none; text-align: center; transition: transform 0.3s, box-shadow 0.3s; border: 2px solid transparent;"
                onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 8px 16px rgba(67,97,238,0.2)'; this.style.borderColor='#4361ee';"
                onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none'; this.style.borderColor='transparent';">
                 <i class="fas fa-file-alt" style="font-size: 2rem; color: #4361ee; margin-bottom: 10px;"></i>
-                <h3 style="font-size: 1.1rem; color: #0b1630; margin: 0;">Biodata Maker</h3>
+                <h3 style="font-size: 1.1rem; color: #0b1630; margin: 0;">Marriage Biodata Maker</h3>
             </a>
 
             <a href="marriage-card.html" style="display: block; padding: 20px; background: #f8f9ff; border-radius: 12px; text-decoration: none; text-align: center; transition: transform 0.3s, box-shadow 0.3s; border: 2px solid transparent;" 
