--- a/biodata-maker.html
+++ b/biodata-maker.html
@@ -4,9 +4,9 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
-<title>Biodata Maker - Online Free Tool | easyjpgtopdf</title>
-    <meta name="description" content="Use our free Biodata Maker tool online. Fast, secure, and easy to use.">
-    <meta name="keywords" content="biodata-maker, biodata maker, free biodata-maker, online biodata-maker">
+<title>Marriage Biodata Maker - Online Free Tool | easyjpgtopdf</title>
+    <meta name="description" content="Use our free Marriage Biodata Maker tool online. Create professional marriage biodata with live preview. Fast, secure, and easy to use.">
+    <meta name="keywords" content="marriage biodata maker, biodata maker, marriage biodata, free biodata maker, online biodata maker, marriage biodata template, biodata for marriage">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://easyjpgtopdf.com/biodata-maker.html">
 <link href="css/footer.css" rel="stylesheet"/>
@@ -561,8 +561,8 @@
     {
       "@context": "https://schema.org",
       "@type": "WebPage",
-      "name": "Biodata Maker - Online Free Tool | easyjpgtopdf",
-      "description": "Use our free Biodata Maker tool online. Fast, secure, and easy to use.",
+      "name": "Marriage Biodata Maker - Online Free Tool | easyjpgtopdf",
+      "description": "Use our free Marriage Biodata Maker tool online. Create professional marriage biodata with live preview. Fast, secure, and easy to use.",
       "url": "https://easyjpgtopdf.com/biodata-maker.html",
       "inLanguage": "en-US",
       "isPartOf": {
@@ -596,7 +596,8 @@
 
 <section class="hero">
 <div class="container">
-<h1>Biodata Maker - Online Free Tool</h1>
+<h1>Marriage Biodata Maker - Online Free Tool</h1>
+<h2 style="font-size: 1.3rem; opacity: 0.95; margin-top: 10px; font-weight: 400;">Create Professional Marriage Biodata with Live Preview</h2>
 <p>Fill in your details on the left, see a live preview on the right, and export a clean biodata that supports any Indian language.</p>
 </div>
 </section>
@@ -899,10 +900,10 @@
         <div class="container" style="max-width: 900px; margin: 0 auto;">
             <h2 style="font-size: 2rem; color: #4361ee; margin-bottom: 20px; text-align: center;">
                 <i class="fas fa-info-circle" style="margin-right: 10px;"></i>
-                About Biodata Maker
+                About Marriage Biodata Maker
             </h2>
             <div class="content-text" style="font-size: 1.1rem; color: #56607a; line-height: 1.8; text-align: center; margin-bottom: 30px;">
-                <p>Our biodata maker is a professional online tool that helps you create impressive biodata, resumes, and CVs with ease. This comprehensive tool is perfect for job seekers, professionals, and students who need to create professional biodata documents quickly and effectively. The biodata maker provides various templates, formats, and layouts to suit different industries and career levels. You can customize fonts, colors, sections, and layouts to create a biodata that reflects your personality and professional style. The tool includes sections for personal information, education, work experience, skills, achievements, and more. Whether you're creating a resume, CV, or biodata for job applications, our biodata maker provides a comprehensive solution. The tool allows you to export your biodata in PDF format for easy sharing and printing. All biodata creation happens securely in the cloud with automatic file deletion after processing. The tool is completely free to use with no watermarks, and premium users can access additional templates and advanced customization options. No software installation is required - simply use our online editor to create your biodata and download your professional document. Whether you're creating resumes, CVs, or biodata for job applications, our biodata maker provides a reliable, fast, and professional solution for all your biodata creation needs.</p>
+                <p>Our Marriage Biodata Maker is a professional online tool designed specifically for creating impressive marriage biodata documents. This comprehensive tool is perfect for individuals and families looking to create professional marriage biodata quickly and effectively. The marriage biodata maker provides various templates, formats, and layouts to suit different cultural preferences and requirements. You can customize fonts, colors, sections, and layouts to create a biodata that reflects your personality and family background. The tool includes sections for personal information, family details, education, career, partner preferences, horoscope details, and more. Whether you're creating a biodata for arranged marriage, matrimonial websites, or family introductions, our marriage biodata maker provides a comprehensive solution. The tool allows you to export your biodata in PDF format for easy sharing and printing. All biodata creation happens securely in your browser with no data stored on servers. The tool is completely free to use with no watermarks, and supports all Indian languages with Unicode text support. No software installation is required - simply use our online editor to create your marriage biodata and download your professional document. Whether you're creating biodata for yourself or helping family members, our Marriage Biodata Maker provides a reliable, fast, and professional solution for all your marriage biodata creation needs.</p>
             </div>
             
             <div class="features-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin-top: 30px;">
@@ -930,7 +931,7 @@
     <section class="how-to-guide" style="margin: 40px 0; padding: 40px; background: white; border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
         <h2 style="font-size: 2rem; color: #4361ee; margin-bottom: 30px; text-align: center;">
             <i class="fas fa-book-open" style="margin-right: 10px;"></i>
-            How to Use Biodata Maker
+            How to Use Marriage Biodata Maker
         </h2>
         <div class="steps-container" style="max-width: 800px; margin: 0 auto;">
             <ol style="list-style: none; padding: 0; counter-reset: step-counter;">
